<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/oneui"
        android:text="Privacy View"
        android:textColor="?android:textColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/oneui"
        android:text="@string/test_new_security_features"
        android:textColor="?android:textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oneui"
        android:layout_gravity="center"
        android:text="@string/exclusive_access_to_new_features"
        android:textColor="@color/subTextColorLight"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_text" />

    <TextView
        android:id="@+id/share_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oneui"
        android:text="@string/share_feedback"
        android:textColor="?android:textColor"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <TextView
        android:id="@+id/share_feedback_description"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oneui"
        android:text="@string/become_part_of_development"
        android:textColor="@color/subTextColorLight"
        android:textSize="12sp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_feedback_title" />

    <ImageView
        android:id="@+id/parent_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/lisense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_feedback_description">

    </ImageView>

    <TextView
        android:id="@+id/license_text"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/oneui"
        android:textSize="12sp"
        android:textColor="@color/subTextColorLight"
        app:layout_constraintStart_toEndOf="@+id/parent_img"
        app:layout_constraintTop_toBottomOf="@+id/share_feedback_description">

    </TextView>

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/license_text">

    </ImageView>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:buttonTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"></CheckBox>

    <TextView
        android:id="@+id/acceptance_text"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:fontFamily="@font/oneui"
        android:textColor="@color/subTextColorLight"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/line">

    </TextView>

    <ImageButton
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec_low_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceptance_text" />

    <TextView
        android:id="@+id/text_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/oneui"
        android:text="@string/text_continue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:contextClickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="@+id/continue_button"
        app:layout_constraintStart_toStartOf="@+id/continue_button"
        app:layout_constraintTop_toTopOf="@+id/continue_button" />

</androidx.constraintlayout.widget.ConstraintLayout>